test/functions/deitz/test_return2.good
test_return2.chpl:1: error: Not all returns in this function return a value
